fix: Correct app title and remove unnecessary SafeAreaView import

--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
-
 {
   "expo": {
-    "name": "Menuer",
-    "slug": "Menuer",
+    "name": "Diet Menu Generator",
+    "slug": "Diet Menu Generator",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/natively-dark.png",
@@ -45,5 +44,5 @@
       "router": {}
     }
   },
-  "scheme": "Menuer"
+  "scheme": "Diet Menu Generator"
 }
